DAY 7 Progress [Gradient Boost]

--- a/Lead_Predict.ipynb
+++ b/Lead_Predict.ipynb
@@ -6565,6 +6565,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 739,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "GB = GradientBoostingClassifier(n_estimators=300,\n",
+    "                                 learning_rate=0.05,\n",
+    "                                 random_state=100,\n",
+    "                                 max_features=5)\n",
+    "GB.fit(x_trainl,y_trainl)\n",
+    "y_pred_GB = GB.predict(x_testl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 740,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.692722371967655\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.68      0.70      0.69       720\n",
+      "           1       0.71      0.68      0.70       764\n",
+      "\n",
+      "    accuracy                           0.69      1484\n",
+      "   macro avg       0.69      0.69      0.69      1484\n",
+      "weighted avg       0.69      0.69      0.69      1484\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score,classification_report\n",
+    "print(accuracy_score(y_pred_GB,y_testl))\n",
+    "print(classification_report(y_pred_GB,y_testl))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
