--- a/Lead_Predict.ipynb
+++ b/Lead_Predict.ipynb
@@ -5793,34 +5793,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 704,
+   "execution_count": 791,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.svm import SVC\n",
     "svm_smote = SVC()\n",
-    "svm_smote.fit(x_test0,y_test0)\n",
+    "svm_smote.fit(x_train0,y_train0)\n",
     "y_pred_svm_smote = svm_smote.predict(x_test0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 705,
+   "execution_count": 792,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.761455525606469\n",
+      "0.6677897574123989\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.73      0.78      0.76       702\n",
-      "           1       0.79      0.74      0.77       782\n",
+      "           0       0.67      0.67      0.67       751\n",
+      "           1       0.66      0.66      0.66       733\n",
       "\n",
-      "    accuracy                           0.76      1484\n",
-      "   macro avg       0.76      0.76      0.76      1484\n",
-      "weighted avg       0.76      0.76      0.76      1484\n",
+      "    accuracy                           0.67      1484\n",
+      "   macro avg       0.67      0.67      0.67      1484\n",
+      "weighted avg       0.67      0.67      0.67      1484\n",
       "\n"
      ]
     }
@@ -6564,6 +6564,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gradient Boost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Label encoded dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 739,
    "metadata": {},
@@ -6604,6 +6618,326 @@
     "from sklearn.metrics import accuracy_score,classification_report\n",
     "print(accuracy_score(y_pred_GB,y_testl))\n",
     "print(classification_report(y_pred_GB,y_testl))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using SMOTE Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 750,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "GB_SMOTE = GradientBoostingClassifier(\n",
+    "    n_estimators= 300,\n",
+    "    learning_rate = 0.05,\n",
+    "    random_state= 42,\n",
+    "    max_features= 5\n",
+    ")\n",
+    "GB_SMOTE.fit(x_train0_sm,y_train0_sm)\n",
+    "y_pred_GB_smote = GB_SMOTE.predict(x_test0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 751,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6805929919137467\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.66      0.69      0.68       710\n",
+      "           1       0.70      0.67      0.69       774\n",
+      "\n",
+      "    accuracy                           0.68      1484\n",
+      "   macro avg       0.68      0.68      0.68      1484\n",
+      "weighted avg       0.68      0.68      0.68      1484\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score,classification_report\n",
+    "print(accuracy_score(y_pred_GB_smote,y_test0))\n",
+    "print(classification_report(y_pred_GB_smote,y_test0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hyper paramter tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 763,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 108 candidates, totalling 540 fits\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "gb_hyper = GradientBoostingClassifier()\n",
+    "\n",
+    "param_grid = {\n",
+    "    'n_estimators' : [100,200,300],\n",
+    "    'max_depth' : [3,4,5],\n",
+    "    'learning_rate' : [0.05,0.1,1],\n",
+    "    'subsample' : [0.8,1],\n",
+    "    'max_features' : [None,'sqrt']\n",
+    "}\n",
+    "\n",
+    "grid_search = GridSearchCV(estimator=gb_hyper,param_grid=param_grid,cv=5,scoring='accuracy',n_jobs=-1,verbose=1)\n",
+    "\n",
+    "grid_search.fit(x_trainl,y_trainl)\n",
+    "y_pred_GB_hyper = grid_search.predict(x_testl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 759,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'learning_rate': 0.1, 'max_depth': 4, 'max_features': None, 'n_estimators': 100, 'subsample': 1}\n",
+      "0.6908754776067328\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(grid_search.best_params_)\n",
+    "print(grid_search.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 764,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6866576819407008\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.67      0.70      0.68       723\n",
+      "           1       0.70      0.68      0.69       761\n",
+      "\n",
+      "    accuracy                           0.69      1484\n",
+      "   macro avg       0.69      0.69      0.69      1484\n",
+      "weighted avg       0.69      0.69      0.69      1484\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score,classification_report\n",
+    "print(accuracy_score(y_pred_GB_hyper,y_testl))\n",
+    "print(classification_report(y_pred_GB_hyper,y_testl))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 765,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "RF = RandomForestClassifier()\n",
+    "RF.fit(x_trainl,y_trainl)\n",
+    "y_pred_Rf = RF.predict(x_testl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 766,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6442048517520216\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.64      0.65      0.65       740\n",
+      "           1       0.65      0.64      0.64       744\n",
+      "\n",
+      "    accuracy                           0.64      1484\n",
+      "   macro avg       0.64      0.64      0.64      1484\n",
+      "weighted avg       0.64      0.64      0.64      1484\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score,classification_report\n",
+    "print(accuracy_score(y_pred_Rf,y_testl))\n",
+    "print(classification_report(y_pred_Rf,y_testl))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SMOTE "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 780,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "random_smote = RandomForestClassifier()\n",
+    "random_smote.fit(x_train0_sm,y_train0_sm)\n",
+    "y_pred_random = random_smote.predict(x_test0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 781,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6509433962264151\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.64      0.66      0.65       732\n",
+      "           1       0.66      0.64      0.65       752\n",
+      "\n",
+      "    accuracy                           0.65      1484\n",
+      "   macro avg       0.65      0.65      0.65      1484\n",
+      "weighted avg       0.65      0.65      0.65      1484\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score,classification_report\n",
+    "print(accuracy_score(y_pred_random,y_test0))\n",
+    "print(classification_report(y_pred_random,y_test0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hyper parameter tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 789,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 432 candidates, totalling 2160 fits\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "random_hyper = RandomForestClassifier()\n",
+    "param_grid = {\n",
+    "    'n_estimators': [100, 200, 300],          \n",
+    "    'max_depth': [None, 10, 20, 30],          \n",
+    "    'min_samples_split': [2, 5, 10],          \n",
+    "    'min_samples_leaf': [1, 2, 4],            \n",
+    "    'max_features': ['sqrt', 'log2'],         \n",
+    "    'bootstrap': [True, False]                \n",
+    "}\n",
+    "\n",
+    "grid_search = (GridSearchCV(estimator=random_hyper,param_grid=param_grid,cv=5,scoring='accuracy',n_jobs=-1,verbose=1))\n",
+    "grid_search.fit(x_trainl,y_trainl)\n",
+    "y_pred_RF_hyper = grid_search.predict(x_trainl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 790,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Found input variables with inconsistent numbers of samples: [5936, 1484]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[790], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m accuracy_score,classification_report\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43maccuracy_score\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_pred_RF_hyper\u001b[49m\u001b[43m,\u001b[49m\u001b[43my_testl\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(classification_report(y_pred_RF_hyper,y_testl))\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/sklearn/utils/_param_validation.py:216\u001b[0m, in \u001b[0;36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    210\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    211\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[1;32m    212\u001b[0m         skip_parameter_validation\u001b[38;5;241m=\u001b[39m(\n\u001b[1;32m    213\u001b[0m             prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[1;32m    214\u001b[0m         )\n\u001b[1;32m    215\u001b[0m     ):\n\u001b[0;32m--> 216\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    217\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m InvalidParameterError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    218\u001b[0m     \u001b[38;5;66;03m# When the function is just a wrapper around an estimator, we allow\u001b[39;00m\n\u001b[1;32m    219\u001b[0m     \u001b[38;5;66;03m# the function to delegate validation to the estimator, but we replace\u001b[39;00m\n\u001b[1;32m    220\u001b[0m     \u001b[38;5;66;03m# the name of the estimator by the name of the function in the error\u001b[39;00m\n\u001b[1;32m    221\u001b[0m     \u001b[38;5;66;03m# message to avoid confusion.\u001b[39;00m\n\u001b[1;32m    222\u001b[0m     msg \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msub(\n\u001b[1;32m    223\u001b[0m         \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter of \u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mw+ must be\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    224\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfunc\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__qualname__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m must be\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    225\u001b[0m         \u001b[38;5;28mstr\u001b[39m(e),\n\u001b[1;32m    226\u001b[0m     )\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/sklearn/metrics/_classification.py:227\u001b[0m, in \u001b[0;36maccuracy_score\u001b[0;34m(y_true, y_pred, normalize, sample_weight)\u001b[0m\n\u001b[1;32m    225\u001b[0m \u001b[38;5;66;03m# Compute accuracy for each possible representation\u001b[39;00m\n\u001b[1;32m    226\u001b[0m y_true, y_pred \u001b[38;5;241m=\u001b[39m attach_unique(y_true, y_pred)\n\u001b[0;32m--> 227\u001b[0m y_type, y_true, y_pred \u001b[38;5;241m=\u001b[39m \u001b[43m_check_targets\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_true\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_pred\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    228\u001b[0m check_consistent_length(y_true, y_pred, sample_weight)\n\u001b[1;32m    230\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m y_type\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmultilabel\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/sklearn/metrics/_classification.py:98\u001b[0m, in \u001b[0;36m_check_targets\u001b[0;34m(y_true, y_pred)\u001b[0m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Check that y_true and y_pred belong to the same classification task.\u001b[39;00m\n\u001b[1;32m     72\u001b[0m \n\u001b[1;32m     73\u001b[0m \u001b[38;5;124;03mThis converts multiclass or binary types to a common shape, and raises a\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[38;5;124;03my_pred : array or indicator matrix\u001b[39;00m\n\u001b[1;32m     96\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     97\u001b[0m xp, _ \u001b[38;5;241m=\u001b[39m get_namespace(y_true, y_pred)\n\u001b[0;32m---> 98\u001b[0m \u001b[43mcheck_consistent_length\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_true\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_pred\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     99\u001b[0m type_true \u001b[38;5;241m=\u001b[39m type_of_target(y_true, input_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my_true\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    100\u001b[0m type_pred \u001b[38;5;241m=\u001b[39m type_of_target(y_pred, input_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my_pred\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/sklearn/utils/validation.py:475\u001b[0m, in \u001b[0;36mcheck_consistent_length\u001b[0;34m(*arrays)\u001b[0m\n\u001b[1;32m    473\u001b[0m uniques \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39munique(lengths)\n\u001b[1;32m    474\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(uniques) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m--> 475\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    476\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFound input variables with inconsistent numbers of samples: \u001b[39m\u001b[38;5;132;01m%r\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    477\u001b[0m         \u001b[38;5;241m%\u001b[39m [\u001b[38;5;28mint\u001b[39m(l) \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m lengths]\n\u001b[1;32m    478\u001b[0m     )\n",
+      "\u001b[0;31mValueError\u001b[0m: Found input variables with inconsistent numbers of samples: [5936, 1484]"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score,classification_report\n",
+    "print(accuracy_score(y_pred_RF_hyper,y_testl))\n",
+    "print(classification_report(y_pred_RF_hyper,y_testl))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 788,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'bootstrap': True, 'max_depth': 10, 'max_features': 'log2', 'min_samples_leaf': 4, 'min_samples_split': 10, 'n_estimators': 300}\n",
+      "0.6851447641253876\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(grid_search.best_params_)\n",
+    "print(grid_search.best_score_)"
    ]
   },
   {
